--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
            <div class="header-content">
              <!-- Add your profile picture here -->
                <h1>DHANUSH PANDIAN</h1></h1>
-         <img src="/image /dhanush.jpg" alt="Your" class="profile-picture">
+         <img src="IMG-20231026-WA0046.jpg" alt="Your" class="profile-picture">
              <p> studying</p>
 
            </div>
